--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,6 +1,7 @@
+
+
 body{
-	font-family: 'Merriweather Sans', sans-serif;
-	
+	font-family: 'Merriweather Sans', sans-serif;	
 }
 
 #navSearch{
@@ -61,6 +62,23 @@ body{
     width: 100%;
     padding-top: 15px;
     margin: 0 0 0 15px;
+}
+
+
+
+#createDate {
+	padding-top: 80px;
+}
+
+li.active {
+	color: red;
+}
+
+.footer {
+
+	background: black;
+	padding-top: 20px;
+	color: white;
 }
 
 /* .dropdown {
