added complete search functionality with fuzzy search

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -152,9 +152,9 @@
             
             <div class="col-md-12 col-lg-12 reset-right">
                 <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> by the book</a>
-                <form class="navbar-form navbar-right" role="search">
+                <form class="navbar-form navbar-right" role="search" action="search" method="POST">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search" id="navSearch">
+                        <input type="text" class="form-control" placeholder="Search" id="navSearch" name="search">
                         <button type="submit" class="form-control btn-default">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         </button>
@@ -189,9 +189,7 @@
                     <li><a href="/category/programming">Programming</a></li>
                     <li><a href="/category/javascript">Javascript</a></li>
                     <li><a href="/category/sciencefiction">Science Fiction</a></li>
-                    <li><a href="/category/selfhelp#">Self Help</a></li>
-                    <li><a href="/category/classics">Classics</a></li>
-                    <li><a href="/category/poetry#">Poetry</a></li>
+                    <li><a href="/category/git">Git</a></li>
                 </ul>
                 
             </div>
