--- a/views/authorprofile.ejs
+++ b/views/authorprofile.ejs
@@ -1,29 +1,24 @@
 <%- include('partials/header'); %>
 	<%- include('partials/navigation'); %>
 
-		<div class="container Author">
-			<div class="row">
-				<div class="col-md-10 col-md-offset-1">
-					<div class="well well-sm profile">
-						<div>
+		<div class="container">
+			<div class="jumbotron">
 
-							<div class="col-md-12">
-								<div class="col-md-4">
-									<img src="<%= author.author_img %>">
-								</div>
-								<div class="col-md-8">
-									<h1 id="Author">
-										<%= author.name %>
-									</h1>
-									<p>
-										<%=  author.description %>
-									</p>
-								</div>
+
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1">
+						<div class="col-xs-12 col-sm-6 col-md-4">
+							<div class="thumbnail">
+								<img src="<%=author.author_img%>.png" alt="Image of  <%= author.name %>">
 							</div>
-
-
-
-
+						</div>
+						<div class="col-md-8">
+							<h1 id="Author">
+								<%= author.name %>
+							</h1>
+							<p>
+								<%=  author.description %>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -78,13 +73,4 @@
 			</div>
 		</div>
 
-
-
-
-
-
-
-
-		</body>
-
-		</html>
+		<%- include('partials/footer'); %>
