--- a/views/showall.ejs
+++ b/views/showall.ejs
@@ -21,11 +21,11 @@
 
             <div class="container">
                 <div class="row" style="display:flex; flex-wrap: wrap;">
-                <% if (navInfo.slice(-1)[0][1] = "showallauthors") { %>
+                <% if (navInfo.slice(-1)[0][1] == "showallauthors") { %>
                 <% authors.forEach((author) => { %>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="thumbnail">
-                            <img src="<%=author.author_img %>.jpg" alt="Image of  <%=author.name %>">
+                            <img src="<%=author.author_img %>.png" alt="Image of  <%=author.name %>">
                             <div class="caption">
                                 <h3>
                                     <%= author.name  %>
@@ -41,6 +41,9 @@
                     </div>
                     <% }) %>
                 <% } else { %>
+                    <% if (books.length == 0) { %> 
+                        <h1 class="bg-danger"> No books found! </h1>
+                    <%} else %>
                     <% books.forEach((book) => { %>
                         <div class="col-xs-12 col-sm-6 col-md-3">
                             <div class="thumbnail">
