--- a/views/search.ejs
+++ b/views/search.ejs
@@ -16,7 +16,7 @@
                 <% authors.forEach((author) => { %>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="thumbnail">
-                            <img src="<%=author.author_img %>.png" alt="Image of  <%=author.name %>">
+                            <img src="<%=author.author_img %>.jpg" alt="Image of  <%=author.name %>">
                             <div class="caption">
                                 <h3>
                                     <%= author.name  %>
