--- a/views/authorprofile.ejs
+++ b/views/authorprofile.ejs
@@ -9,8 +9,11 @@
 					<div class="col-md-10 col-md-offset-1">
 						<div class="col-xs-12 col-sm-6 col-md-4">
 							<div class="thumbnail">
-								<img src="<%=author.author_img%>.png" alt="Image of  <%= author.name %>">
+								<img src="<%=author.author_img%>.jpg" alt="Image of  <%= author.name %>">
 							</div>
+
+							<a href="#" class="fa fa-facebook"></a>
+							<a href="#" class="fa fa-twitter"></a>
 						</div>
 						<div class="col-md-8">
 							<h1 id="Author">
