--- a/views/book.ejs
+++ b/views/book.ejs
@@ -42,20 +42,26 @@
 
 										<hr>
 										<div class="btn-group cart">
-											<button type="button" class="btn btn-success">
-												Buy now
-											</button>
+											<a href="/book/ISBN/<%=book.ISBN13%>/buynow">
+												<button type="button" class="btn btn-success">
+													Buy now
+												</button>
+											</a>
 										</div>
 										<div class="btn-group wishlist">
-											<button type="button" class="btn btn-danger">
-												Add to wishlist
-											</button>
+											<a href="/book/ISBN/<%=book.ISBN13%>/addtowishlist">
+												<button type="button" class="btn btn-danger">
+													Add to wishlist
+												</button>
+											</a>
 										</div>
 
 										<div class="btn-group readlist">
-											<button type="button" class="btn btn-info">
-												Add to readlist
-											</button>
+											<a href="/book/ISBN/<%=book.ISBN13%>/addtoreadlist">
+												<button type="button" class="btn btn-info">
+													Add to readlist
+												</button>
+											</a>
 										</div>
 						</div>
 					</div>
@@ -94,6 +100,10 @@
 
 								<section class="container">
 									<h3>Book Information</h3>
+									<p>Pages: <%= book.pages %> </p>
+									<p>Publisher: <%= book.publisher %> </p>
+									<p>Publish Date: <%= book.publish_date %> </p>
+									<p>Genre: <%= book.genre %> </p>
 									<p>Condition: New</p>
 									<p>Type: Hardback</p>
 								</section>
@@ -251,7 +261,6 @@
 												</a>
 											</div>
 										</div>
-
 									</div>
 								</section>
 							</div>
