--- a/views/newbook.ejs
+++ b/views/newbook.ejs
@@ -1,3 +1,50 @@
 <%- include('partials/header'); %>
 <%- include('partials/navigation'); %>
 
+
+<div class="container">
+<div class="row">
+    <div class="col-md-10 col-md-offset-1">
+        <div class="well well-sm">
+            <form class="form-horizontal" action="" method="post">
+                <fieldset>
+                    <legend class="text-left">Contact us</legend>
+                    <!-- ISBN Input -->
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="isbn">Name</label>
+                        <div class="col-md-9">
+                            <input id="isbn" name="isbn" type="text" placeholder="Book ISBN" class="form-control">
+                        </div>
+                    </div>
+
+                    <!-- Name input-->
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="title">Name</label>
+                        <div class="col-md-9">
+                            <input id="title" name="title" type="text" placeholder="Book Title" class="form-control">
+                        </div>
+                    </div>
+                    
+                    <!-- Message body -->
+                    <div class="form-group">
+                        <label class="col-md-3 control-label" for="description">Your message</label>
+                        <div class="col-md-9">
+                            <textarea class="form-control" id="description" name="description" placeholder="Enter Description" rows="5"></textarea>
+                        </div>
+                    </div>
+                    
+                    <!-- Form actions -->
+                    <div class="form-group">
+                        <div class="col-md-12 text-right">
+                            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+
+
+<%- include('partials/footer'); %>
