--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/stylesheets/BootstrapXL.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/contact_style.css">
 	
 	
 	<script src="/jQuery/jquery-3.2.1.min.js" defer></script>
