--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -29,122 +29,19 @@
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser) { %>
                         <li>								
-                            <a href="#" data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-user" aria-hidden="true" ></span> Login</a>
+                            <a href="/users/login"><span class="glyphicon glyphicon-user" aria-hidden="true" ></span> Login</a>
                         </li>
                         
                         <li>	
-                            <a href="#" data-toggle="modal" data-target="#regModal"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Register</a>
+                            <a href="/users/register"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Register</a>
                         </li>
+                        <% } else { %>
+								<li><a href="/users/profile/<%= currentUser.username %>">Signed In As <%= currentUser.username %></a></li>
+								<li><a href="/logout">Logout</a></li>
+						<% } %>
                     </ul>
-                    
-                    
-                    <div id="loginModal" class="modal fade" role="dialog">
-                        <div class="modal-dialog">
-                            
-                            <!-- Modal content-->
-                            <div class="modal-content text-primary">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Login</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="loginMail">Email address:</label>
-                                            <input type="email" class="form-control" id="loginMail" name="loginMail">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="loginPwd">Password:</label>
-                                            <input type="password" class="form-control" id="loginPwd" name="loginPwd">
-                                        </div>
-                                        <div class="checkbox">
-                                            <label><input type="checkbox" name="loginRemember"> Remember me</label>
-                                        </div>
-                                        <button type="submit" class="btn btn-default">Sign In</button>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    
-                    <div id="regModal" class="modal fade " role="dialog">
-                        <div class="modal-dialog">
-                            
-                            <!-- Modal content-->
-                            <div class="modal-content text-primary">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Register</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="form-row">
-                                            <div class="form-group col-md-6">
-                                                <label for="regEmail">Email</label>
-                                                <input type="email" class="form-control" id="regEmail" name="regEmail" placeholder="Email">
-                                            </div>
-                                            <div class="form-group col-md-6">
-                                                <label for="regPass">Password</label>
-                                                <input type="password" class="form-control" id="regPass" name="regPass" placeholder="Password">
-                                            </div>
-                                        </div>
-                                        
-                                        <div class="form-row">
-                                            
-                                            <div class="form-group col-md-6">
-                                                <label for="regAddress">Address</label>
-                                                <input type="text" class="form-control" id="regAddress" name="regAddress" placeholder="1234 Main St">
-                                            </div>
-                                            <div class="form-group col-md-6">
-                                                <label for="regAddress2">Address 2</label>
-                                                <input type="text" class="form-control" id="regAddress2" name="regAddress2" placeholder="Apartment, studio, or floor">
-                                            </div>
-                                        </div>
-                                        <div class="form-row">
-                                            <div class="form-group col-md-6">
-                                                <label for="regCity">City</label>
-                                                <input type="text" class="form-control" id="regCity" name="regCity" placeholder="Gujranwala">
-                                            </div>
-                                            <div class="form-group col-md-4">
-                                                <label for="regState">State</label>
-                                                <select id="regState" class="form-control" name="regState">
-                                                    <option disabled selected>Choose...</option>
-                                                    <option>Sindh</option>
-                                                    <option>Punjab</option>
-                                                    <option>Balochistan</option>
-                                                    <option>Khyber-Pakhtunkhwa</option>
-                                                    <option>Kashmir</option>
-                                                </select>
-                                            </div>
-                                            <div class="form-group col-md-2">
-                                                <label for="regZip">Zip</label>
-                                                <input type="text" class="form-control" id="regZip" name="regZip">
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="regAgree" required>
-                                                <label class="form-check-label" for="regAgree">
-                                                    I agree to the <a href="#">Privacy Policy</a>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Register</button>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                            
-                        </div>
-                    </div>
-                    
                     
                 </div>
             </div>
@@ -152,7 +49,7 @@
             
             <div class="col-md-12 col-lg-12 reset-right">
                 <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> by the book</a>
-                <form class="navbar-form navbar-right" role="search" action="search" method="POST">
+                <form class="navbar-form navbar-right" role="search" action="/search" method="POST">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search" id="navSearch" name="search">
                         <button type="submit" class="form-control btn-default">
