--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -1,37 +1,31 @@
 <%- include('partials/header'); %>
+<%- include('partials/navigation'); %>
 
-
-
-
-
-	<div class="container Author">
+<div class="container">
+	<div class="jumbotron" style="margin-top:20px">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
-				<div class="well well-sm profile">
-					<div>
-					
-					<div class="col-md-12">
-						 <div class="col-md-4"><img src="a1.png"></div>
-						 <div class="col-md-8"><h1 id="Author">
-						  Addy Osmani</h1>
-						 <p> Justin@emaple.com</p></div></div>
-					
-						
-						
-						
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="/images/blank.png" alt="Image of <%=currentUser.username%>">
 					</div>
-
-
-					<div id="best-sellers">
-					</div>
+				</div>
+				<div class="col-md-8">
+					<h1 id="Author">
+						<%= currentUser.username %>
+					</h1>
+					<p>
+					<%= currentUser.about %>
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
 
 
-	<div id="best-sellers">
+	<div id="wishlist">
 		<nav class="navbar navbar-default navbar-inverse ">
 			<div class="container">
 				<div class="navbar-header">
@@ -59,54 +53,12 @@
 							</p>
 						</div>
 					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img6.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img5.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img4.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>	
+				</div>	
+			</div>	
+		</div>
 	</div>
 
-	<div id="best-sellers">
+	<div id="readlist">
 		<nav class="navbar navbar-default navbar-inverse ">
 			<div class="container">
 				<div class="navbar-header">
@@ -135,56 +87,8 @@
 						</div>
 					</div>
 				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img6.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img5.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img4.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>	
 	</div>
 
-
-
-
-
-
-</body>
-</html>
+	<%- include('partials/footer'); %>
