functional readlist and wishlist done!

--- a/views/authorprofile.ejs
+++ b/views/authorprofile.ejs
@@ -11,9 +11,10 @@
 							<div class="thumbnail">
 								<img src="<%=author.author_img%>.jpg" alt="Image of  <%= author.name %>">
 							</div>
-
-							<a href="#" class="fa fa-facebook"></a>
-							<a href="#" class="fa fa-twitter"></a>
+							<a href="https://www.facebook.com/"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+							<a href="https://twitter.com/"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+							<a href="https://plus.google.com/"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+							<a href="#"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
 						</div>
 						<div class="col-md-8">
 							<h1 id="Author">
