--- a/views/book.ejs
+++ b/views/book.ejs
@@ -13,9 +13,12 @@
 
 						<div class="col-md-6 col-lg-8">
 							<div class="product-title">
-								<h1>
+								<h2>
 									<%= book.title  %>
-								</h1>
+								</h2>
+							</div>
+							<div id="bookauthor">
+								<h3>By <a href="/author/<%=author.author_id%>"><%= author.name %></a> </h3>
 							</div>
 							<div class="product-desc">
 								<%= book.description  %>
@@ -113,64 +116,7 @@
 
 								<section class="container">
 
-									<div class="panel-group">
-										<div class="panel panel-default">
-											<div class="panel-heading">
-												Random User
-												<div class="product-rating">
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star-o"></i>
-													<i class="fa fa-star-o"></i>
-												</div>
-											</div>
-											<div class="panel-body">
-												<p>
-													A mock review on this amazing book defining all its amazing capabilites, highligting all its features that won't stop giving
-													joy. But for some reason will still rate it horribly. Here's some Lorem ipsum dolor sit amet consectetur adipisicing
-													elit. Ipsum, itaque labore iusto voluptatem pariatur omnis exercitationem dolor quos consectetur distinctio
-													quis earum aut praesentium culpa nihil quas repudiandae quasi officia.
-												</p>
-											</div>
-											<div class="panel-footer">
-												<a class="review-date" href="#">
-													<time datetime="2018-01-5T20:00">2018-01-5 20:00</time>
-												</a>
-											</div>
-										</div>
-
-									</div>
-
-									<div class="panel-group">
-										<div class="panel panel-default">
-											<div class="panel-heading">
-												Random User
-												<div class="product-rating">
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star-o"></i>
-													<i class="fa fa-star-o"></i>
-												</div>
-											</div>
-											<div class="panel-body">
-												<p>
-													A mock review on this amazing book defining all its amazing capabilites, highligting all its features that won't stop giving
-													joy. But for some reason will still rate it horribly. Here's some Lorem ipsum dolor sit amet consectetur adipisicing
-													elit. Ipsum, itaque labore iusto voluptatem pariatur omnis exercitationem dolor quos consectetur distinctio
-													quis earum aut praesentium culpa nihil quas repudiandae quasi officia.
-												</p>
-											</div>
-											<div class="panel-footer">
-												<a class="review-date" href="#">
-													<time datetime="2018-01-5T20:00">2018-01-5 20:00</time>
-												</a>
-											</div>
-										</div>
-
-									</div>
-
+								
 
 
 									<div class="panel-group">
@@ -203,65 +149,6 @@
 									</div>
 
 
-
-									<div class="panel-group">
-										<div class="panel panel-default">
-											<div class="panel-heading">
-												Random User
-												<div class="product-rating">
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star-o"></i>
-													<i class="fa fa-star-o"></i>
-												</div>
-											</div>
-											<div class="panel-body">
-												<p>
-													A mock review on this amazing book defining all its amazing capabilites, highligting all its features that won't stop giving
-													joy. But for some reason will still rate it horribly. Here's some Lorem ipsum dolor sit amet consectetur adipisicing
-													elit. Ipsum, itaque labore iusto voluptatem pariatur omnis exercitationem dolor quos consectetur distinctio
-													quis earum aut praesentium culpa nihil quas repudiandae quasi officia.
-												</p>
-											</div>
-											<div class="panel-footer">
-												<a class="review-date" href="#">
-													<time datetime="2018-01-5T20:00">2018-01-5 20:00</time>
-												</a>
-											</div>
-										</div>
-
-									</div>
-
-
-
-									<div class="panel-group">
-										<div class="panel panel-default">
-											<div class="panel-heading">
-												Random User
-												<div class="product-rating">
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star gold"></i>
-													<i class="fa fa-star-o"></i>
-													<i class="fa fa-star-o"></i>
-												</div>
-											</div>
-											<div class="panel-body">
-												<p>
-													A mock review on this amazing book defining all its amazing capabilites, highligting all its features that won't stop giving
-													joy. But for some reason will still rate it horribly. Here's some Lorem ipsum dolor sit amet consectetur adipisicing
-													elit. Ipsum, itaque labore iusto voluptatem pariatur omnis exercitationem dolor quos consectetur distinctio
-													quis earum aut praesentium culpa nihil quas repudiandae quasi officia.
-												</p>
-											</div>
-											<div class="panel-footer">
-												<a class="review-date" href="#">
-													<time datetime="2018-01-5T20:00">2018-01-5 20:00</time>
-												</a>
-											</div>
-										</div>
-									</div>
 								</section>
 							</div>
 						</div>
