--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@
                                         <div class="form-group">
                                             <div class="col-md-12 " id="SignIn">
                                                 <button type="submit" class="btn btn-primary btn-lg">Sign In</button>
-                                                <a href="/register" id="SignUp">Or Sign Up</a>
+                                                <a href="/users/register" id="SignUp">Or Sign Up</a>
                                             </div>
 
                                         </div>
