--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,7 +49,7 @@
                                 <div class="form-group">
                                     <div class="col-md-9 " id="SignIn">
                                         <button type="submit" class="btn btn-primary btn-lg ">Sign Up</button>
-                                        <a href="/login" id="SignUp">Or Sign In</a>
+                                        <a href="/users/login" id="SignUp">Or Sign In</a>
                                     </div>
                                 </div>
                             </fieldset>
