--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				<div class="well well-sm">
-					<form class="form-horizontal" action="" method="post">
+					<form class="form-horizontal" action="/contact" method="post">
 						<fieldset>
 							<legend class="text-left">Contact us</legend>
 							
