--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
 						<p><%= book.description.toString().substring(0, 100) %></p>
 						<p>
 							<a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a> 
-							<a href="#" class="btn btn-default" role="button">Price <%= book.price %></a>
+							<span class="btn btn-default" role="button">Price <%= book.price %></span>
 						</p>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 						<p><%= book.description.toString().substring(0, 100) %></p>
 						<p>
 							<a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a> 
-							<a href="#" class="btn btn-default" role="button">Price <%= book.price %></a>
+							<span class="btn btn-default" role="button">Price <%= book.price %></span>
 						</p>
 					</div>
 				</div>
@@ -161,7 +161,7 @@
 					<p><%= book.description.toString().substring(0, 100) %></p>
 					<p>
 						<a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a> 
-						<a href="#" class="btn btn-default" role="button">Price <%= book.price %></a>
+						<span class="btn btn-default" role="button">Price <%= book.price %></span>
 					</p>
 				</div>
 			</div>
