--- a/views/showall.ejs
+++ b/views/showall.ejs
@@ -57,9 +57,9 @@
                                     </p>
                                     <p>
                                         <a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a>
-                                        <a href="#" class="btn btn-default" role="button">Price
+                                        <p>Price
                                             <%= book.price %>
-                                        </a>
+                                        </p>
                                     </p>
                                 </div>
                             </div>
