--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -40,22 +40,29 @@
 		</nav>
 			
 		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img7.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="html/mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
+		<div class="row" style="display:flex; flex-wrap: wrap; ">
+
+
+		<% if(wishlist.length > 0) { wishlist.forEach(book => { %>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="thumbnail">
+					<img src="<%=book.book_img %>.jpg" alt="Image of  <%=book.title %>">
+					<div class="caption">
+						<h3><%= book.title  %></h3>
+						<p><%= book.description.toString().substring(0, 100) %></p>
+						<p>
+							<a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a> 
+							<a href="#" class="btn btn-default" role="button">Price <%= book.price %></a>
+						</p>
 					</div>
-				</div>	
-			</div>	
+				</div>
+			</div>
+		<% }) } else { %>
+			<h1> Wishlist Empty. :( <a href="/showallbooks"> Add some books! </a>
+	<% }%>
+			
 		</div>
+	</div>
 	</div>
 
 	<div id="readlist">
@@ -73,22 +80,29 @@
 		</nav>
 			
 		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-3">
-					<div class="thumbnail">
-						<img src="img/img7.jpg" alt="...">
-						<div class="caption">
-							<h3>Book Title</h3>
-							<p>A not so long book description that'd satiate a person's yearning to click more.</p>
-							<p>
-								<a href="html/mockbook.html" class="btn btn-primary" role="button">Read More</a> 
-								<a href="#" class="btn btn-default" role="button">Price</a>
-							</p>
-						</div>
+		<div class="row" style="display:flex; flex-wrap: wrap; ">
+
+
+		<% if(readlist.length > 0) { readlist.forEach(book => { %>
+			<div class="col-xs-12 col-sm-6 col-md-3">
+				<div class="thumbnail">
+					<img src="<%=book.book_img %>.jpg" alt="Image of  <%=book.title %>">
+					<div class="caption">
+						<h3><%= book.title  %></h3>
+						<p><%= book.description.toString().substring(0, 100) %></p>
+						<p>
+							<a href="/book/ISBN=<%= book.ISBN13 %>" class="btn btn-primary" role="button">Read More</a> 
+							<a href="#" class="btn btn-default" role="button">Price <%= book.price %></a>
+						</p>
 					</div>
 				</div>
 			</div>
-		</div>	
+		<% }) } else { %>
+			<h1> Readlist Empty. :( <a href="/showallbooks"> Add some books! </a>
+	<% }%>
+			
+		</div>
+	</div>
 	</div>
 
 	<%- include('partials/footer'); %>
