Remove from wishlist and readlist functionalities

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,6 +27,12 @@
             
         </div>
     </div>
-</footer>			
-</body>
+</footer>		
+
+	
+	
+<script src="/jQuery/jquery-3.2.1.min.js"></script>
+<script src="/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="/javascripts/customscript.js"></script>
+</body> 
 </html>
