--- a/views/authorprofile.ejs
+++ b/views/authorprofile.ejs
@@ -20,6 +20,13 @@
 							<h1 id="Author">
 								<%= author.name %>
 							</h1>
+							<div class="btn-group wishlist">
+							<a href="/author/<%=author.author_id%>/addfavoriteauthor">
+								<button type="button" class="btn btn-danger">
+									Add as Favorite Author
+								</button>
+							</a>
+						</div>
 							<p>
 								<%=  author.description %>
 							</p>
