--- a/views/book.ejs
+++ b/views/book.ejs
@@ -51,18 +51,41 @@
 												</button>
 											</a>
 										</div>
-										<div class="btn-group wishlist">
-											<a href="/book/ISBN/<%=book.ISBN13%>/addtowishlist">
-												<button type="button" class="btn btn-danger">
-													Add to wishlist
-												</button>
-											</a>
-										</div>
 
+										<% var inWishlist = false; 
+										if(currentUser && (JSON.stringify(currentUser.wishlist).includes(book._id))) {
+											inWishlist = true
+										} 
+										%>
+											<div class="btn-group wishlist">
+												
+													<a href="/book/ISBN/<%=book.ISBN13%>/addtowishlist" >
+													<button   type="button" class="btn btn-danger">
+													<% if(!inWishlist) { %>
+														Add to wishlist
+														<%} else { %>
+														Remove from wishlist
+														
+													<%}%>
+													</button>
+												</div>
+
+
+											
+										<% var inReadlist = false; 
+										if(currentUser && (JSON.stringify(currentUser.readlist).includes(book._id))) {
+											inReadlist = true;
+										} 
+										%>
 										<div class="btn-group readlist">
 											<a href="/book/ISBN/<%=book.ISBN13%>/addtoreadlist">
-												<button type="button" class="btn btn-info">
-													Add to readlist
+												<button title="Disabled" type="button" class="btn btn-primary">
+												<% if(!inReadlist) { %>
+												Add to readlist
+												<% } else { %>
+												Remove from readlist
+												
+												<%}%>
 												</button>
 											</a>
 										</div>
@@ -110,15 +133,19 @@
 									<p>Condition: New</p>
 									<p>Type: Hardback</p>
 								</section>
-
 							</div>
 							<div class="tab-pane fade" id="service-three">
-
 								<section class="container">
-
-								
-
-
+								<div style="width: 100%; margin: 25px auto;">
+								<form action="/book/ISBN/<%=book.ISBN13%>/addreview" method="POST">
+									<div class="form-group">
+										<textarea rows="5" cols="20" class="form-control" type="text" name="comment[text]" placeholder="text"> </textarea>
+									</div>
+									<div class="form-group">
+										<button class="btn btn-lg btn-primary btn-block">Submit</button>
+									</div>
+								</form>
+							</div>
 									<div class="panel-group">
 										<div class="panel panel-default">
 											<div class="panel-heading">
@@ -132,6 +159,12 @@
 												</div>
 											</div>
 											<div class="panel-body">
+											<div class="container">
+											<div class="row">
+												<h1 style="text-align: center; font-size: 15px;">Review <%= book.title %></h1>		
+		
+											</div>
+										</div>
 												<p>
 													A mock review on this amazing book defining all its amazing capabilites, highligting all its features that won't stop giving
 													joy. But for some reason will still rate it horribly. Here's some Lorem ipsum dolor sit amet consectetur adipisicing
