--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -105,4 +105,44 @@
 	</div>
 	</div>
 
+
+	<div id="favoriteauthors">
+	<nav class="navbar navbar-default navbar-inverse ">
+		<div class="container">
+			<div class="navbar-header">
+				<ul class="nav navbar-nav navbar-right"> 
+					<li role="separator" class="vert-separator hidden-xs"></li>						
+					<li class="nav-items"><a href="#" > Favorite Author </a></li>
+					<li role="separator" class="vert-separator hidden-xs" ></li>
+					
+				</ul>
+			</div>
+		</div>
+	</nav>
+		
+	<div class="container">
+	<div class="row" style="display:flex; flex-wrap: wrap; ">
+
+
+	<% if(favAuthors.length > 0) { favAuthors.forEach(author => { %>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<div class="thumbnail">
+				<img src="<%=author.author_img %>.jpg" alt="Image of  <%=author.name %>">
+				<div class="caption">
+					<h3><%= author.name  %></h3>
+					<p><%= author.description.toString().substring(0, 100) %></p>
+					<p>
+						<a href="/author/<%= author.author_id %>" class="btn btn-primary" role="button">Read More</a> 
+					</p>
+				</div>
+			</div>
+		</div>
+	<% }) } else { %>
+		<h1> Favorite Authors Empty. :( <a href="/showallauthors"> Favorite Some Authors Now! </a>
+<% }%>
+		
+	</div>
+</div>
+</div>
+
 	<%- include('partials/footer'); %>
